Fixed search input width on mobile

--- a/frontend/src/components/search/search-input/search-input.css
+++ b/frontend/src/components/search/search-input/search-input.css
@@ -1,5 +1,5 @@
 .MuiAutocomplete-root {
-    width: 50% !important;
+    width: 100% !important;
     margin: 0 auto;
     background: white;
     border-radius: 100px;
